[project]
name = "mcp-weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchainhub>=0.1.21",
    "openai>=1.98.0",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]
